# gral

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: index.html  style.css
latex-source/: 10_17_-6_mos.tex  17-modes.tex  baglama_fifths_2.mathrm.tex  baglama_fifths_mathrm.tex  baglama_thirds_and_fifths.mathrm.tex  floor.tex  fretboard_diagram.tex  hanson-no-tree.mathrm.tex  hanson-tree.mathrm.tex  harmonic_template.tex  harmonic_template_2.tex  hebdomekontany-2.tex  heuristic.tex  lattice.tex  partch_2_7.tex  partch_4_7.tex  partch_7_12.tex  secondary-mos-17-0.tex  secondary-mos-17-1.tex  secondary-mos-17-2.tex  secondary-mos-17-3.tex  secondary-mos-17-4.tex  secondary-mos-17-5.tex  secondary-mos-17-6.tex  secondary-mos-17-basis.tex  secondary-mos-tanabe-0.tex  secondary-mos-tanabe-1.tex  secondary-mos-tanabe-2.tex  secondary-mos-tanabe-3.tex  secondary-mos-tanabe-4.tex  secondary-mos-tanabe-5.tex  secondary-mos-tanabe-6.tex  secondary-mos-tanabe-basis.tex  stack.tex  staircase-1.tex  staircase-2.tex  staircase-3.tex  steps-17.tex  steps-tanabe.tex  wilson_keyboard_mapping.bib  (+16 more)
src/gral/: box_opt.py  gral_search.py  harmonic_template.py  scale_degree.py  utils.py
tests/: mocks.py  test_box_opt.py  test_gral_search.py  test_harmonic_template.py  test_scale_degree.py
tests/data/: baglama-template-2.csv  baglama-template-3.csv  baglama-template-4.csv  baglama-template.csv  cents.scl  genus-template.csv  genus.scl  nonoctave.scl  ratios-and-cents.scl  ref-model.pb.txt
